--- a/ApiDotenet.Robusta.Application/ApiDotenet.Robusta.Application.csproj
+++ b/ApiDotenet.Robusta.Application/ApiDotenet.Robusta.Application.csproj
@@ -7,10 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="FluentValidation" Version="11.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.7" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiDotnetRobusta.Domain\ApiDotnetRobusta.Domain.csproj" />
   </ItemGroup>
 
 </Project>
